--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@tippyjs/react": "^4.2.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -36,7 +37,8 @@
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
